WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264111
[WebGPU] Buffer synchronization is implemented incorrectly leading to data races between the CPU and GPU
https://bugs.webkit.org/show_bug.cgi?id=264111
Summary
[WebGPU] Buffer synchronization is implemented incorrectly leading to data ra...
Mike Wyrzykowski
Reported
2023-11-02 12:59:29 PDT
[WebGPU] Buffer synchronization is implemented incorrectly leading to data races between the CPU and GPU Specifically, calling GPUCommandEncoder.copyXToBuffer() and then mapping the buffer contents returns the pointer, but the copy command may still be in flight. This leads to data races
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-02 12:59:44 PDT
<
rdar://problem/117869389
>
Mike Wyrzykowski
Comment 2
2023-11-03 00:21:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19938
EWS
Comment 3
2023-11-03 12:14:34 PDT
Committed
270195@main
(1ab3947e3854): <
https://commits.webkit.org/270195@main
> Reviewed commits have been landed. Closing PR #19938 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug