Source/WebGPU/WebGPU/Queue.h
@@ -72,6 +72,7 @@ public:
     id<MTLCommandQueue> commandQueue() const { return m_commandQueue; }
 
     const Device& device() const { return m_device; }
+    void waitUntilIdle();
 
 private:
     Queue(id<MTLCommandQueue>, Device&);
@@ -102,6 +103,7 @@ private:
     HashMap<uint64_t, OnSubmittedWorkScheduledCallbacks, DefaultHash<uint64_t>, WTF::UnsignedWithZeroKeyHashTraits<uint64_t>> m_onSubmittedWorkScheduledCallbacks;
     using OnSubmittedWorkDoneCallbacks = Vector<WTF::Function<void(WGPUQueueWorkDoneStatus)>>;
     HashMap<uint64_t, OnSubmittedWorkDoneCallbacks, DefaultHash<uint64_t>, WTF::UnsignedWithZeroKeyHashTraits<uint64_t>> m_onSubmittedWorkDoneCallbacks;
+    NSMutableSet<id<MTLCommandBuffer>> *m_pendingCommandBuffers;
 };
 
 } // namespace WebGPU
